--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1686,36 +1686,36 @@ We give below some examples of user function definitions:
 	function two() : int
 	begin
 		(* Return 2 *)
-		1 + 1
+		return 1 + 1
 	end
 
 	(* This function adds 1 to the integer argument *)
 	function add_one(i : int) : int
 	begin
 		(* Add one to i *)
-		i + 1
+		return i + 1
 	end
 
 	(* This function sums the two integer arguments *)
 	function add(a : int, b : int) : int
 	begin
 		(* Add a to b *)
-		a + b
+		return a + b
 	end
 
 	(* Linear interpolation example with some local variables *)
 	function lerp(a : rat, b : rat, x : rat) : rat
 	begin
-		let length : rat = b - a in
-		let pos : rat = length * x in
-		a + pos
+		var length : rat = b - a;
+		var pos : rat = length * x;
+		return a + pos
 	end
 
 	(* Get last element of a list *)
 	function last(l : rat list)
 	begin
-		let n : int = list_length(l) in
-		l[n - 1]
+		var n : int = list_length(l);
+		return l[n - 1]
 	end
 
 	(* This function has side-effects *)
@@ -1724,12 +1724,12 @@ We give below some examples of user function definitions:
 		(* Modify some global variables *)
 		my_global_i := i * 2;
 		my_global_j := j * 3;
-		my_global_i + my_global_j
+		return my_global_i + my_global_j
 	end
 
 	function side_effect_without_return_type(i : int, j : int) : void
 	begin
-		side_effect(i, j);
+		return side_effect(i, j);
 	end
 
 \end{IMITATORmodel}
@@ -1765,19 +1765,19 @@ We give below some examples of incorrect user function definitions:
 		p1 := 0;
 		(* Modification of a function argument is forbidden, an error will be raised *)
 		i := 0;
-		0
+		return 0
 	end
 
 	(* Recursive calls are forbidden, an error will be raised *)
 	function mutual_rec_f2() : int
 	begin
-		mutual_rec_f1()
+		return mutual_rec_f1()
 	end
 
 	function mutual_rec_f1() : int
 	begin
-		let a : int = mutual_rec_f2() in
-		a + 1
+		var a : int = mutual_rec_f2();
+		return a + 1
 	end
 
 \end{IMITATORmodel}
@@ -1803,27 +1803,27 @@ We give below some examples of user function definitions:
 	begin
 		(* Modification of a global variable lead to label the function internally as a ``side-effect function'' *)
 		my_global_i := 0;
-		0
+		return 0
 	end
 
 	(* This function shadow a local, a global variable and an argument *)
 	function shadow_variables(i : int) : int
 	begin
 		(* Local variable my_global_i shadow global variable of the same name *)
-		let my_global_i : int = 4 in
-		let a : int = 0 in
+		var my_global_i : int = 4;
+		var a : int = 0;
 		(* a shadow previous declaration and will now be equal to 5 *)
-		let a : int = 5 in
+		var a : int = 5;
 		(* i shadow argument i *)
-		let i : rat = 3 in
+		var i : rat = 3;
 		(* Return 3 + 5 + 4 = 12 *)
-		i + a + my_global_i
+		return i + a + my_global_i
 	end
 
 	(* This function call another function *)
 	function call_other_function() : int
 	begin
-		shadow_variables(0) + shadow_variables(1)
+		return shadow_variables(0) + shadow_variables(1)
 	end
 
 \end{IMITATORmodel}
