Update keywords in lexer/parser/manual

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -527,24 +527,24 @@
 	deletekeywords={done},            % if you want to delete keywords from the given language; WARNING! must be set AFTER the `language=…`
 	morekeywords={
 		accepting, actions, and, array, array_append, array_length, array_mem, automaton,
-		binary, bool,
-		clock, constant, continuous,
-		discrete, do,
-		end,
+		begin, binary, bool,
+		clock, constant, continuous, controllable,
+		discrete, do, done, downto,
+		else, end,
 		False, fill_left, fill_right, flow, fn, from, function,
 		goto,
-		if, in, init, initially, int, int_div, invariant,
+		if, in, init, initially, int, int_div, inside, invariant, is,
 		list, list_cons, list_hd, list_is_empty, list_length, list_mem, list_rev, list_tl, loc, logand, lognot, logor, logxor,
 		mod,
 		not,
 		or,
-		parameter, pow, projectresult,
+		parameter, pow,
 		queue, queue_clear, queue_is_empty, queue_length, queue_pop, queue_push, queue_top,
-		rat, rational,
-		shift_left, shift_right, stack, stack_clear, stack_is_empty, stack_length, stack_pop, stack_push, stack_top, stop, sync, synclabs,
-		True,
+		rat, rational, return,
+		shift_left, shift_right, stack, stack_clear, stack_is_empty, stack_length, stack_pop, stack_push, stack_top, stop, sync,
+		then, to, True,
 		urgent,
-		var,
+		var, void,
 		when, while,
 	},
 	numbers=right,                    % where to put the line-numbers; possible values are (none, left, right)
