User manual: add TODO

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1078,6 +1078,8 @@ Examples of stack definitions are given below:
 \begin{example}
 	The following code fragment illustrates some possibilities offered by the stacks operations:
 
+% NOTE: TODO: all seq-then should be removed from examples and explanations!
+
 %------------------------------------------------------------
 	\begin{IMITATORmodel}
 		loc l0: invariant True
