Add lexical scope section to user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1855,6 +1855,93 @@ To illustrate the use of user-defined functions, note that the following guard i
 \end{example}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Lexical scope}\label{section:variable_scope}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
+\subsection{Blocs and lexical scope}
+%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
+
+Some structure as \styleIMI{function}, \styleIMI{for}, \styleIMI{while}, \styleIMI{if} works as blocs.
+Each bloc define a lexical scope containing all the variables defined within it.
+These blocs can sometimes be nested and define a level hierarchy of lexical scopes.
+This simple rule is followed: every inner level can access its outer levels.
+
+For example, a variable \styleIMI{x} declared at the top most of the model, a global variable, is accessible at any level of the model.
+We can access \styleIMI{x} in any user functions, loops, conditions.
+
+\begin{example}
+	To illustrate example above:
+
+\begin{IMITATORmodel}
+(* Declare a global variable `i` *)
+var i : rat;
+
+function f() : int
+begin
+
+	(* In this bloc: *)
+	(* We can access to higher level lexical scope containing: `i` *)
+	(* We can access to current scope containing `j` *)
+	(* We cannot access to lower level scopes *)
+
+	var j : int = i;
+
+	if j = 0 then
+		(* In this bloc: *)
+		(* We can access to higher level lexical scope containing: `i`, `j` *)
+		(* We can access to current scope containing `k` *)
+
+		var k : int = 1;
+		j := i + 1;
+		if True then
+			(* In this bloc: *)
+			(* We can access to higher level lexical scope containing: `i`, `j`, `k` *)
+			j := j + i + k;
+		end
+	else
+		(* In this bloc: *)
+		(* We can access to higher level lexical scope containing: `i`, `j` *)
+		(* We cannot access to variable `k` because it was defined in another separated bloc *)
+		j := 2 * i;
+	end
+
+	return j;
+end
+\end{IMITATORmodel}
+\end{example}
+
+Note: lexical scope in \imitator{} is a static scope, each variable membership is deduced at compile-time.
+
+%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
+\subsection{Variable shadowing}
+%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
+
+If a variable declared at lower level have the same name as a variable declared at a higher level, the second one is shadowed by the first one.
+
+\begin{example}
+	To illustrate variable shadowing:
+
+\begin{IMITATORmodel}
+(* Formal parameter `i` is shadowing global variable i *)
+function f(i : int) : int
+begin
+
+	var j : int = i; (* `i` here is the formal parameter `i` *)
+	var i : int = 1;
+
+	for i from 0 to 10 do
+		j := j + i; (* `i` here is the `i` from for *)
+	done
+
+	j := j + i; (* `i` here is the local declared variable *)
+
+	return j;
+end
+\end{IMITATORmodel}
+\end{example}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Parameter synthesis using \imitator{}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
