Modify user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -1848,7 +1848,7 @@ We give below some examples of user function definitions:
 %-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%-%
 
 User-defined functions can be called in guards, invariants or updates in the same manner as the built-in functions.
-However, side-effect user-defined functions can only be used in sequential updates.
+However, side-effect user-defined functions can only be used in updates.
 
 Arguments of a function can be any well-typed expression as well as other function calls.
 
